// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceSearchResultList renders correctly for "in progress" state 1`] = `
<div>
  <h2>
    Search for a place 
  </h2>
  <input
    onChange={[Function]}
    placeholder="Search"
    type="search"
  />
  <ul
    className="results"
  >
    <li
      className="blue"
    >
      Searching for 
      xylophone
       ...
    </li>
  </ul>
</div>
`;

exports[`PlaceSearchResultList renders correctly for "not yet started" state 1`] = `
<div>
  <h2>
    Search for a place 
  </h2>
  <input
    onChange={[Function]}
    placeholder="Search"
    type="search"
  />
  <ul
    className="results"
  >
    <li
      className="blue"
    >
      Please enter a search term above
    </li>
  </ul>
</div>
`;

exports[`PlaceSearchResultList renders correctly for populated set of results 1`] = `
<div>
  <h2>
    Search for a place 
  </h2>
  <input
    onChange={[Function]}
    placeholder="Search"
    type="search"
  />
  <ul
    className="results"
  >
    <li
      className="search-result"
    >
      <img
        className="icon"
        src="https://maps.gstatic.com/mapfiles/place_api/icons/restaurant-71.png"
      />
      <h3>
        Donut Hut
      </h3>
      <p>
        <a
          href="https://maps.google.com/?cid=120619770426743829911"
          target="_blank"
        >
          31 Little Canada Road East, Little Canada
        </a>
         
        -
         
        
      </p>
    </li>
    <li
      className="search-result"
    >
      <img
        className="icon"
        src="https://maps.gstatic.com/mapfiles/place_api/icons/restaurant-71.png"
      />
      <h3>
        Donut Hut
      </h3>
      <p>
        <a
          href="https://maps.google.com/?cid=120619770426743829912"
          target="_blank"
        >
          31 Little Canada Road East, Little Canada
        </a>
         
        -
         
        
      </p>
    </li>
    <li
      className="search-result"
    >
      <img
        className="icon"
        src="https://maps.gstatic.com/mapfiles/place_api/icons/restaurant-71.png"
      />
      <h3>
        Donut Hut
      </h3>
      <p>
        <a
          href="https://maps.google.com/?cid=120619770426743829913"
          target="_blank"
        >
          31 Little Canada Road East, Little Canada
        </a>
         
        -
         
        
      </p>
    </li>
  </ul>
</div>
`;
